<resources>
    <string name="app_name">A.L.C 4.0</string>
    <string name="my_photo">My Photo</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="title_activity_profile">ActivityProfile</string>
    <string name="name_daniel_anomfueme">   Name:     Daniel Anomfueme</string>
    <string name="track_android">   Track:     Android</string>
    <string name="profile">profile</string>
    <string name="country_nigeria"> Country:     Nigeria</string>
    <string name="email_anomfuemedaniel_gmail_com"> Email:     anomfuemedaniel@gmail.com</string>
    <string name="phone_number_2348161576719">  Phone Number:     +2348161576719</string>
    <string name="slack_username_danielanomfueme">  Slack Username:     @danielanomfueme</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
</resources>
